my candidates uneven lines fixed

--- a/public/style.css
+++ b/public/style.css
@@ -2423,6 +2423,8 @@ button.link {
     width: calc(100% - 35px);
     text-align: left;
     margin: 15px 20px 10px 15px;
+    border-collapse: separate;
+    border-spacing: 0px;
 }
 .myCandidates.mobile .candidateTable {
     margin: 0 15px 15px 15px;
